<resources>
    <string name="app_name">AZ Video Editor</string>
    <string name="screen_recorder_name">AZ Screen Recorder</string>
    <string name="video_tab_title">Videos</string>
    <string name="image_tab_title">Images</string>
    <string name="audio_tab_title">Audio</string>
    <string name="txt_add_media">Media</string>
    <string name="txt_add_text">Text</string>
    <string name="volume_editor_title">Volume</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="confirm_export_title">Confirm Export</string>
    <string name="confirm_export_msg">Do you want to export video now?</string>
    <string name="export_progress_msg">Export video</string>
    <string name="dialog_title_new_project_name">Create Project</string>
    <string name="dialog_title_rename_project">Rename Project</string>
    <string name="dialog_mess_rename_project">Enter Name: </string>
    <string name="positive_btn_text_create_project">Create Project</string>
    <string name="toast_file_not_exists_when_click_play">Some file is not exists, please remove it before playing</string>
    <string name="toast_file_not_exists_when_click_export">Some file is not exists, please remove it before exporting</string>
    <string name="spinner_text">Aa Bb Cc</string>
    <string name="dialog_ask_premium_remove_watermark_title">Remove watermark</string>
    <string name="dialog_ask_premium_title">Pro feature</string>
    <string name="dialog_ask_premium_remove_watermark_message">Please upgrade to remove watermark and use all premium features.</string>
    <string name="dialog_ask_premium_trim_message">This feature is used to trim or cut middle videos.\n\nDo you want to use it?</string>
    <string name="dialog_ask_premium_gif_message">GIF converter is used to export recorded videos to GIF files.\n\nDo you want to use it?</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="purchase_failed">Purchase failed</string>
    <string name="purchase_success">Thank you for donate</string>
    <string name="export_completed">Export Completed.</string>
    <string name="export_completing">Completing..</string>
    <string name="exporting_msg">Exporting..</string>
    <string name="dialog_title_delete_video">Delete Video</string>
    <string name="dialog_msg_delete_video">Do you want to delete this video?</string>
    <string name="dialog_title_delete_image">Remove Image</string>
    <string name="dialog_msg_delete_image">Do you want to remove this image?</string>
    <string name="dialog_title_delete_text">Remove Text</string>
    <string name="dialog_msg_delete_text">Do you want to remove this text?</string>
    <string name="dialog_title_delete_audio">Delete Audio</string>
    <string name="dialog_msg_delete_audio">Do you want to delete this audio?</string>
    <string name="dialog_title_delete_project">Delete Project</string>
    <string name="dialog_msg_delete_project">Do you want to delete this project?</string>
    <string name="dialog_pick_time_title">Pick Time</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_watch_video">WATCH VIDEO</string>
    <string name="btn_view_gif">VIEW GIF</string>
    <string name="btn_back">BACK</string>
    <string name="btn_export_video">EXPORT VIDEO</string>
    <string name="btn_export_gif">EXPORT GIF</string>
    <string name="video_name_title">Video Name:</string>
    <string name="gif_name_title">Gif Name:</string>
    <string name="full_hd_quality">Full HD (1080p)</string>
    <string name="hd_quality">HD (720p)</string>
    <string name="sd_quality">SD (480p)</string>
    <string name="color_picker_opacity_title">Opacity</string>
    <string name="tip_export">*Tip: You should not change to other apps while exporting for good export performance</string>
    <string name="font_title">Font : </string>
    <string name="text_background_title">Background</string>
    <string name="text_color_title">Text Color</string>
    <string name="hash_tag">#</string>
    <string name="colon">:</string>
    <string name="volume_value">100%</string>
    <string name="new_project">New Project</string>
    <string name="btn_open_project">Open</string>
    <string name="btn_delete_project">Delete</string>
    <string name="btn_rename_project">Rename</string>
    <string name="dialog_title_overwrite_file">Overwrite File</string>
    <string name="dialog_msg_overwrite_file">This file name is already exists. Do you want to overwrite it?</string>
    <string name="msg_need_install_video_player">You must install video player to watch video</string>
    <string name="btn_remove_watermark_text">Remove Watermark</string>
    <string name="btn_report">Report</string>
    <string name="text_btn_back">Back</string>
    <string name="text_btn_add">Add</string>
    <string name="text_btn_play">Preview</string>
    <string name="text_btn_setting">More</string>
    <string name="text_btn_export">Export</string>
    <string name="text_btn_video">Video</string>
    <string name="text_btn_image">Image</string>
    <string name="text_btn_audio">Audio</string>
    <string name="text_btn_add_text">Text</string>
    <string name="text_btn_trim">Trim</string>
    <string name="text_btn_delete">Delete</string>
    <string name="text_btn_volume">Volume</string>
    <string name="text_btn_crop">Crop</string>
    <string name="text_btn_upgrade">Upgrade</string>
    <string name="text_btn_feedback">Feedback</string>
    <string name="text_btn_edit_text">Edit Text</string>
    <string name="text_btn_gif">Export Gif</string>
    <string name="text_btn_new">New</string>
    <string name="text_btn_recent">Recent</string>
    <string name="text_pro">Pro</string>
    <string name="fps_gif">Fps</string>
    <string name="scale_gif">Scale</string>
    <string name="loop_gif">Loop</string>
    <string name="text_default_fps_gif">10</string>
    <string name="text_default_scale_gif">720 x 1280</string>
    <string name="text_default_loop_gif">No loop</string>
    <string name="exporting_video">Exporting Video..</string>
    <string name="preparing_video">Preparing Videos..</string>
    <string name="exporting_gif">Exporting Gif..</string>
    <string name="keep_original_ratio">Keep original ratio (Much faster)</string>
    <string name="dialog_title_gif_duration_warning">Gif Duration Limit</string>
    <string name="dialog_msg_gif_duration_warning">You can not export Gif with duration longer than 20 seconds.\n\nPlease adjust videos with trim feature and try again.</string>
    <string name="recent_project_dialog_title">Recent projects</string>
    <string name="recent_project_action_open">Open</string>
    <string name="recent_project_action_rename">Rename</string>
    <string name="recent_project_action_delete">Delete</string>
    <string name="toast_open_current_project">You currently working on this project</string>
    <string name="toast_delete_current_project">You cannot delete current editing project</string>
    <string name="dialog_open_project_title">Open project</string>
    <string name="dialog_open_project_mess">Do you want open project "'"%s"'" ? All state of current editing project will be saved.</string>
    <string name="toast_add_video_fail">Opp! an error corrupted when adding this video, please try again or select other one video</string>
    <string name="toast_add_audio_fail">Opp! an error corrupted when adding this audio, please try again or select other one audio</string>
    <string name="toast_preparing_project_fail">There is an error corrupted when start new editor, please try again or use old editor</string>
    <string name="toast_error_when_up_level_file_manage">There is an error corrupted with files chooser, please try again.</string>
    <string name="toast_no_email_apps_installed">There are no email apps installed</string>

    <string name="dialog_title_save_project">Save Project</string>
    <string name="dialog_msg_save_project">Do you want to save this project?</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_done">Done</string>
    <string name="action_clear_all_projects">Clear All Projects</string>
    <string name="toast_project_list_empty">List projects is empty</string>
    <string name="toast_delete_project">%d project have been deleted</string>
    <string name="toast_delete_projects">%d projects have been deleted</string>
    <string name="toast_delete_all_projects">all projects have been deleted</string>
    <string name="empty_list_project">List recent projects is empty, please use add button to create a new project</string>

</resources>
