<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232121"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/layout_choose_quality"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/video_name_title"
                    android:textSize="@dimen/text_size_export" />

                <EditText
                    android:id="@+id/edt_output_name"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_border"
                    android:inputType="text"
                    android:labelFor="@+id/edt_output_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_quality_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/quality_groupradio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/hd_radio">

                    <RadioButton
                        android:id="@+id/full_hd_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="1080"
                        android:text="@string/full_hd_quality"
                        android:textSize="@dimen/text_size_export" />

                    <RadioButton
                        android:id="@+id/hd_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="720"
                        android:text="@string/hd_quality"
                        android:textSize="@dimen/text_size_export" />

                    <RadioButton
                        android:id="@+id/sd_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="480"
                        android:text="@string/sd_quality"
                        android:textSize="@dimen/text_size_export" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/checkbox_original_ratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/keep_original_ratio"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_quality_gif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_seekbar_gif">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_title_quality_gif"
                        android:gravity="center_horizontal"
                        android:text="@string/fps_gif"
                        android:textSize="@dimen/text_size_quality_gif" />

                    <SeekBar
                        android:id="@+id/seekbar_fps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_seekbar_quality_gif" />

                    <TextView
                        android:id="@+id/textview_fps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_value_quality_gif"
                        android:gravity="center_horizontal"
                        android:text="@string/text_default_fps_gif"
                        android:textSize="@dimen/text_size_quality_gif" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_seekbar_gif">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_title_quality_gif"
                        android:gravity="center_horizontal"
                        android:text="@string/scale_gif"
                        android:textSize="@dimen/text_size_quality_gif" />

                    <SeekBar
                        android:id="@+id/seekbar_scale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_seekbar_quality_gif" />

                    <TextView
                        android:id="@+id/textview_scale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_value_quality_gif"
                        android:gravity="center_horizontal"
                        android:text="@string/text_default_scale_gif"
                        android:textSize="@dimen/text_size_quality_gif" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_seekbar_gif">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_title_quality_gif"
                        android:gravity="center_horizontal"
                        android:text="@string/loop_gif"
                        android:textSize="@dimen/text_size_quality_gif" />

                    <SeekBar
                        android:id="@+id/seekbar_loop"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_seekbar_quality_gif" />

                    <TextView
                        android:id="@+id/textview_loop"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/weigh_value_quality_gif"
                        android:gravity="center_horizontal"
                        android:text="@string/text_default_loop_gif"
                        android:textSize="@dimen/text_size_quality_gif" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/btn_back" />

                <Button
                    android:id="@+id/btn_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_export_video" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_export_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <at.grabner.circleprogress.CircleProgressView
                android:id="@+id/export_progress"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:cpv_barColor="@color/circle_progress_bar_color"
                app:cpv_fillColor="@color/circle_progress_fill_color"
                app:cpv_maxValue="100"
                app:cpv_rimColor="@color/circle_progress_rim_color"
                app:cpv_textColor="@color/circle_progress_text_color" />

            <TextView
                android:id="@+id/process_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/exporting_video"
                android:textColor="#d7dc45" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_cancel_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_back_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_back"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_after_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_back_after_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/btn_back" />

                <Button
                    android:id="@+id/btn_watch_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/btn_watch_video" />

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_share" />
            </LinearLayout>

            <TextView
                android:id="@+id/textview_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/tip_export"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>