<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/edit_name_title"/>
            <EditText
                android:id="@+id/edt_output_name"
                android:labelFor="@+id/edt_output_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/edittext_border"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/quality_groupradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/hd_radio"
            android:layout_marginStart="20dp">
            <RadioButton
                android:id="@+id/full_hd_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1080"
                android:text="@string/full_hd_quality"/>
            <RadioButton
                android:id="@+id/hd_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="720"
                android:text="@string/hd_quality"/>
            <RadioButton
                android:id="@+id/sd_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="480"
                android:text="@string/sd_quality"/>
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>