<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout_edit_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gradient_edttext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/edit_text_bgr_color"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edittext_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/edittext_border"
                android:gravity="top"
                android:inputType="textNoSuggestions|textMultiLine"
                android:labelFor="@+id/edittext_input"
                android:padding="5dp" />

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layout_color_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pickcolor_border"
                android:clickable="true"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_close_colorpicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:background="#857e7e"
                    android:text="@string/ok_btn" />

                <TextView
                    android:id="@+id/text_hashtag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/hash_tag"
                    android:layout_below="@+id/btn_close_colorpicker"
                    android:textColor="#222222" />

                <EditText
                    android:id="@+id/edt_color_hex"
                    android:layout_width="0dp"
                    app:layout_widthPercent="35%"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/text_hashtag"
                    android:layout_alignBaseline="@+id/text_hashtag"
                    android:background="@drawable/edittext_border"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:labelFor="@+id/edt_color_hex" />

                <com.hecorat.azplugin2.addtext.ColorPickerView
                    android:id="@+id/color_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@id/edt_color_hex"
                    android:layerType="software"
                    android:tag="portrait"/>
            </android.support.percent.PercentRelativeLayout>
        </RelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_text_color"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin_bottom_edittext"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/indicator_textcolor"
                    android:layout_width="@dimen/indicator_text_color"
                    android:layout_height="@dimen/indicator_text_color"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_left_arrow"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:id="@+id/layout_btn_text_color"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_layout_text_background"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_start_text_background"
                    android:layout_toEndOf="@+id/indicator_textcolor"
                    android:background="@drawable/btn_touch_feedback_rec_nobackground"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:text="@string/text_color_title" />

                    <ImageView
                        android:id="@+id/btn_text_color"
                        android:layout_width="@dimen/dimen_btn_text_background"
                        android:layout_height="@dimen/dimen_btn_text_background"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="40dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_text_background" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/layout_text_color"
                android:layout_marginBottom="@dimen/margin_bottom_edittext"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/indicator_textbackground"
                    android:layout_width="@dimen/indicator_text_color"
                    android:layout_height="@dimen/indicator_text_color"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_left_arrow"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:id="@+id/layout_btn_text_bgr_color"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_layout_text_background"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_start_text_background"
                    android:layout_toEndOf="@+id/indicator_textbackground"
                    android:background="@drawable/btn_touch_feedback_rec_nobackground"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:text="@string/text_background_title" />

                    <ImageView
                        android:id="@+id/btn_text_background_color"
                        android:layout_width="@dimen/dimen_btn_text_background"
                        android:layout_height="@dimen/dimen_btn_text_background"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="40dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_text_background" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_font"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/layout_background"
                android:layout_marginBottom="@dimen/margin_bottom_edittext"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_title" />

                <Spinner
                    android:id="@+id/font_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>
</LinearLayout>